# pla-ai-referral-service

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: get-jwt-token.sh  setup-db.sh
src/app/: config.py  dependencies.py  main.py
src/app/core/: exceptions.py  logging.py  pii.py  security.py
src/app/middleware/: auth.py  logging.py  request_id.py
src/app/models/: base.py  item.py
src/app/repositories/: base.py  item.py
src/app/routers/: health.py  item.py  referral.py
src/app/schemas/: common.py  item.py  referral.py  test_match.py
src/app/services/: claude_vision.py  item.py  oauth_client.py  test_matcher.py  test_preprocessor.py
tests/: conftest.py
tests/api/: README.md
tests/api/health/: health.hurl
tests/api/referral/: referral_scan.hurl  test_match.hurl
